Se agregaron logos de los cursos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="right-image slider-image">
-                        <img src="img/logo-with-name-bg-white.jpg" class="image">
+                        <img src="img/Logo-C.png" class="image">
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="right-image slider-image">
-                        <img src="img/logo-with-name-bg-white.jpg" class="image">
+                        <img src="img/Logo-Python.png" class="image">
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="right-image slider-image">
-                        <img src="img/logo-with-name-bg-white.jpg" class="image">
+                        <img src="img/Logo-PHP.png" class="image">
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="right-image slider-image">
-                        <img src="img/logo-with-name-bg-white.jpg" class="image">
+                        <img src="img/Logo-Web.png" class="image">
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="right-image slider-image">
-                        <img src="img/logo-with-name-bg-white.jpg" class="image">
+                        <img src="img/Logo-Java.png" class="image">
                     </div>
                 </div>
             </div>
