--- a/temarioWeb.html
+++ b/temarioWeb.html
@@ -30,7 +30,7 @@
             </div>
             <div class="right-info info-container">
                 <h1>Comience hoy mismo a aprender Web</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>En la actualidad el desarrollo y creación de sitios web se impone en el mundo como herramienta tecnológica para unir las regiones, crear negocios, soportar empresas, mostrarse en el mercado e infinidad de aplicaciones de acuerdo a las perspectivas de las personas y sus alcances, encontrando en la internet fuente vital de generación de empleos, negocios eficaces e inteligentes y gran ayuda en la consecución de objetivos y planteamientos. </p>
                 <a href="#basico" class="link">Enter&eacute;se de nuestros cursos</a>
             </div>
         </div>
