Botones para inicio de sesion y registro agregados

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <li class="nav-bar-list-item"><a href="#top">Inicio</a></li>
             <li class="nav-bar-list-item"><a href="#about">Sobre nosotros</a></li>
             <li class="nav-bar-list-item"><a href="#courses">Cursos</a></li>
+            <li class="nav-bar-list-item-right"><a href="">Registrarse</a></li>
+            <li class="nav-bar-list-item-right"><a href="">Iniciar sesi&oacute;n</a></li>
         </ul>
     </section>
 
