--- a/temarioWeb.html
+++ b/temarioWeb.html
@@ -20,6 +20,8 @@
             <li class="nav-bar-list-item"><a href="index.html#top">Inicio</a></li>
             <li class="nav-bar-list-item"><a href="index.html#about">Sobre nosotros</a></li>
             <li class="nav-bar-list-item"><a href="index.html#courses">Cursos</a></li>
+            <li class="nav-bar-list-item-right"><a href="">Registrarse</a></li>
+            <li class="nav-bar-list-item-right"><a href="">Iniciar sesi&oacute;n</a></li>
         </ul>
     </section>
 
@@ -30,7 +32,8 @@
             </div>
             <div class="right-info info-container">
                 <h1>Comience hoy mismo a aprender Web</h1>
-                <p>En la actualidad el desarrollo y creación de sitios web se impone en el mundo como herramienta tecnológica para unir las regiones, crear negocios, soportar empresas, mostrarse en el mercado e infinidad de aplicaciones de acuerdo a las perspectivas de las personas y sus alcances, encontrando en la internet fuente vital de generación de empleos, negocios eficaces e inteligentes y gran ayuda en la consecución de objetivos y planteamientos. </p>
+                <p>En la actualidad el desarrollo y creación de sitios web se impone en el mundo como herramienta tecnológica para unir las regiones, crear negocios, soportar empresas, mostrarse en el mercado e infinidad de aplicaciones de acuerdo a las
+                    perspectivas de las personas y sus alcances, encontrando en la internet fuente vital de generación de empleos, negocios eficaces e inteligentes y gran ayuda en la consecución de objetivos y planteamientos. </p>
                 <a href="#basico" class="link">Enter&eacute;se de nuestros cursos</a>
             </div>
         </div>
