--- a/temarioC.html
+++ b/temarioC.html
@@ -20,6 +20,8 @@
             <li class="nav-bar-list-item"><a href="index.html#top">Inicio</a></li>
             <li class="nav-bar-list-item"><a href="index.html#about">Sobre nosotros</a></li>
             <li class="nav-bar-list-item"><a href="index.html#courses">Cursos</a></li>
+            <li class="nav-bar-list-item-right"><a href="">Registrarse</a></li>
+            <li class="nav-bar-list-item-right"><a href="">Iniciar sesi&oacute;n</a></li>
         </ul>
     </section>
 
