Agregacion de pagina de login y registro

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <section id="barraSuperior">
         <ul class="nav-bar-list">
             <li class="nav-bar-list-large large">
-                <a href="">
+                <a href="index.html">
                     <img src="img/logo.png" class="icon-logo"> Code Park
                 </a>
             </li>
             <li class="nav-bar-list-item"><a href="#top">Inicio</a></li>
             <li class="nav-bar-list-item"><a href="#about">Sobre nosotros</a></li>
             <li class="nav-bar-list-item"><a href="#courses">Cursos</a></li>
-            <li class="nav-bar-list-item-right"><a href="">Registrarse</a></li>
-            <li class="nav-bar-list-item-right"><a href="">Iniciar sesi&oacute;n</a></li>
+            <li class="nav-bar-list-item-right"><a href="registrarse.html">Registrarse</a></li>
+            <li class="nav-bar-list-item-right"><a href="login.html">Iniciar sesi&oacute;n</a></li>
         </ul>
     </section>
 
