--- a/registrarse.html
+++ b/registrarse.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login</title>
-        <link rel="stylesheet" href="css/estilo.css">
-    </head>
 
-    <body>
-        <div id="bg"></div>
-        <section id="barraSuperior">
-            <ul class="nav-bar-list">
-                <li class="nav-bar-list-large large">
-                    <a href="index.html">
-                        <img src="img/logo.png" class="icon-logo"> Code Park
-                    </a>
-                </li>
-            </ul>
-        </section>
-        <div id="ini">
-            <form id="crear" class="form">
-                <p class="inicio">Crear Usuario</p>
-                <div class="thumbnail"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/hat.svg"/></div>
-                    <input type="text" placeholder="Usuario"/>
-                    <input type="text" placeholder="Correo Electronico"/>
-                    <input type="password" placeholder="Contraseña"/>
-                    <input type="password" placeholder="Confirmar Contraseña"/>
-                    <button>Registrarse</button>
-                    <p class="message">Ya estas registrado? <a href="login.html">Inicia Sesi&oacute;n</a></p>
-            </form>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="css/estilo.css">
+</head>
+
+<body>
+    <div id="bg"></div>
+    <section id="barraSuperior">
+        <ul class="nav-bar-list">
+            <li class="nav-bar-list-large large">
+                <a href="index.html">
+                    <img src="img/logo.png" class="icon-logo"> Code Park
+                </a>
+            </li>
+        </ul>
+    </section>
+    <div id="ini">
+        <form id="crear" class="form">
+            <p class="inicio">Crear Usuario</p>
+            <div class="thumbnail"><img src="img/hat.svg" /></div>
+            <input type="text" placeholder="Usuario" />
+            <input type="text" placeholder="Correo Electronico" />
+            <input type="password" placeholder="Contraseña" />
+            <input type="password" placeholder="Confirmar Contraseña" />
+            <button>Registrarse</button>
+            <p class="message">Ya estas registrado? <a href="login.html">Inicia Sesi&oacute;n</a></p>
+        </form>
+    </div>
+</body>
+
 </html>
